searx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searx
  namespace: searx
spec:
  ports:
  - name: searx
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: searx
  sessionAffinity: None
  type: ClusterIP
